# R-Type

./: CMakeLists.txt  Makefile  README.md  _0gffaa07ff-example.html  _base_8hpp_source.html  _bonus_8hpp_source.html  _boss1_8hpp_source.html  _bullet_8hpp_source.html  _bullet_enemy_8hpp_source.html  _button_8hpp_source.html  _c2_s_client_connect_8hpp_source.html  _c2_s_client_connected_8hpp_source.html  _c2_s_client_disconnect_8hpp_source.html  _c2_s_client_disconnecting_8hpp_source.html  _c2_s_client_move_8hpp_source.html  _c2_s_kill_entity_8hpp_source.html  _c2_s_kill_player_8hpp_source.html  _c2_s_player_handshake_8hpp_source.html  _c2_s_player_prepare_shoot_8hpp_source.html  _c2_s_player_ready_8hpp_source.html  _c2_s_player_shoot_8hpp_source.html  _c2_s_scene_loaded_8hpp_source.html  _c2_s_skill_entity_8hpp_source.html  _c2_s_skill_player_8hpp_source.html  _clock_8hpp_source.html  _core_8hpp.html  _core_8hpp.js  _core_8hpp__dep__incl.map  _core_8hpp__dep__incl.md5  _core_8hpp__incl.map  _core_8hpp__incl.md5  _core_8hpp_source.html  _damaging_8hpp_source.html  _dependencies_8hpp_source.html  _double_bullet_8hpp_source.html  _enemy_8hpp_source.html  _enemy_shooter_8hpp_source.html  _engine_8hpp_source.html  _entity_8hpp_source.html  _entity_manager_8hpp_source.html  (+1068 more)
.github/workflows/: installer.yml  mirror.yml
assets/rtype/nsis/: app.rc
client/: CMakeLists.txt  main.cpp
client/include/: Boss1.hpp  Bullet.hpp  BulletEnemy.hpp  Damaging.hpp  Enemy.hpp  EnemyShooter.hpp  Global.hpp  Parallax.hpp  ParallaxLayer.hpp  Player.hpp  Random.hpp
client/include/bonus/: Bonus.hpp  DoubleBullet.hpp
client/include/network/: NetworkManager.hpp
client/include/scene/: SceneStage1.hpp
client/include/ui/: Button.hpp  InputText.hpp
client/include/uranus/: Core.hpp  Uranus.hpp
client/include/uranus/ecs/: Components.hpp  Registry.hpp  SparseArray.hpp
client/include/uranus/engine/: Components.hpp  Dependencies.hpp  Engine.hpp  Systems.hpp
client/include/uranus/engine/components/: Base.hpp  RectangleShape.hpp  Scene.hpp  Text.hpp
client/include/uranus/engine/manager/: EntityManager.hpp  Manager.hpp  SceneManager.hpp  TextureManager.hpp
client/include/uranus/engine/map/: Map.hpp
client/src/: Boss1.cpp  Bullet.cpp  BulletEnenmy.cpp  Enemy.cpp  EnemyShooter.cpp  Explosion.cpp  Parallax.cpp  ParallaxLayer.cpp  Player.cpp
client/src/bonus/: Bonus.cpp  DoubleBullet.cpp
client/src/network/: Network.hpp  NetworkManager.cpp
client/src/scene/: SceneGame.cpp  SceneMain.cpp  SceneStage1.cpp
client/src/ui/: Button.cpp  InputText.cpp
client/src/uranus/ecs/: Components.cpp
client/src/uranus/engine/: Base.cpp  EntityManager.cpp  Manager.cpp  RenderWindow.cpp  Scene.cpp  SceneManager.cpp  Systems.cpp  TextureManager.cpp
client/src/uranus/engine/map/: Map.cpp
cmake/: CPackConfig.cmake  FindImGui-SFML.cmake  FindUranus.cmake  Findargparse.cmake
cmake/cpack/: CPackNSIS.cmake
common/: CMakeLists.txt  main.cpp
common/include/: Packets.hpp  Player.hpp
common/include/packets/: PlayerHandshake.hpp
common/include/packets/tcp/client/: C2SClientDisconnecting.hpp  C2SPlayerHandshake.hpp
common/include/packets/tcp/server/: S2CPlayerAuthentified.hpp  S2CPlayerScore.hpp
common/include/packets/udp/client/: C2SClientConnect.hpp  C2SClientConnected.hpp  C2SClientDisconnect.hpp  C2SClientMove.hpp  C2SKillEntity.hpp  C2SKillPlayer.hpp  C2SPlayerPrepareShoot.hpp  C2SPlayerReady.hpp  C2SPlayerShoot.hpp  C2SSceneLoaded.hpp  C2SSkillEntity.hpp  C2SSkillPlayer.hpp  C2SkillEntity.hpp  C2SkillPlayer.hpp  S2CClientDisconnect.hpp
common/include/packets/udp/server/: S2CClientConnected.hpp  S2CClientDisconnect.hpp  S2CEntityMove.hpp  S2CEntitySpawn.hpp  S2CEntitymove.hpp  S2CGameStarted.hpp  S2CPlayerChargingBullet.hpp  S2CPlayerMove.hpp  S2CPlayerShootBullet.hpp  S2CPlayermove.hpp  S2CRemoveEntity.hpp  S2CRemovePlayer.hpp  S2CSpawnBullet.hpp  S2CSpawnPlayer.hpp  S2CSyncPlayer.hpp
common/src/: Dummy.cpp  Player.cpp  RegisterPackets.cpp
docs/: Doxyfile
include/: basics.hpp  entity.hpp  entityManager.hpp  newScene.hpp  scene.hpp
search/: all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  files_1.js  functions_0.js  (+24 more)
server/: CMakeLists.txt  main.cpp
server/include/: GameRoom.hpp  GameServer.hpp  Server.hpp
server/include/game/: Game.hpp  Player.hpp
server/src/: GameRoom.cpp  GameServer.cpp
server/src/game/: Player.cpp
